--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,16 +17,16 @@
         <!-- Activity -->
         <activity
             android:name=".DemoActivity"
+            android:label="@string/app_name"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-<!--        <activity-->
-<!--            android:name=".YlanActivity" />-->
-<!--        <activity-->
-<!--            android:name=".DemoActivity"/>-->
+        <activity android:name=".CheatActivity"
+            android:label="@string/app_name"
+            />
     </application>
 
 </manifest>
