--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
 
         <!-- Activity -->
         <activity
-            android:name=".DemoActivity"
+            android:name=".ReckonerActivity"
             android:label="@string/app_name"
             android:exported="true">
             <intent-filter>
@@ -24,9 +24,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CheatActivity"
-            android:label="@string/app_name"
-            />
     </application>
 
 </manifest>
